Tagging jbossws-shared-testsuite 4.0.7.GA